# bijli

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bench-history.csv  benchmarks.md  deny.toml
benches/: benchmarks.rs
docs/development/: roadmap.md
examples/: basic_em.rs
scripts/: bench-history.sh
src/: ai.rs  beam.rs  bridge.rs  charge.rs  circuit.rs  compute.rs  error.rs  fdtd.rs  field.rs  lib.rs  logging.rs  material.rs  maxwell.rs  polarization.rs  relativity.rs  rf.rs  scattering.rs  wave.rs
src/integration/: soorat.rs
tests/: integration.rs
