[package]
name = "bijli"
version = "0.24.3"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0"
description = "Electromagnetism simulation — fields, Maxwell's equations, charge dynamics, EM waves"
homepage = "https://github.com/MacCracken/bijli"
repository = "https://github.com/MacCracken/bijli"
readme = "README.md"
documentation = "https://docs.rs/bijli"
keywords = ["electromagnetism", "physics", "maxwell", "simulation", "fields"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = ["field", "maxwell", "charge", "wave", "circuit", "material", "fdtd", "relativity", "polarization", "scattering"]
field = []
maxwell = []
charge = []
wave = []
circuit = []
material = []
fdtd = []
relativity = []
polarization = []
scattering = []
ai = ["dep:reqwest", "dep:tokio", "dep:serde_json"]
logging = ["dep:tracing-subscriber"]
full = ["field", "maxwell", "charge", "wave", "circuit", "material", "fdtd", "relativity", "polarization", "scattering", "ai", "logging"]

[dependencies]
hisab = "1.1.0"
impetus = "1.0.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

# Optional
reqwest = { version = "0.13", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde_json = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
required-features = ["field", "maxwell", "charge", "wave", "circuit", "material", "fdtd", "relativity", "polarization", "scattering"]

[[test]]
name = "integration"
required-features = ["field", "maxwell", "charge", "wave", "circuit", "material", "fdtd", "relativity", "polarization", "scattering"]

[[example]]
name = "basic_em"
required-features = ["field", "charge"]
