[package]
name = "bijli"
version = "1.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Electromagnetism simulation — fields, Maxwell's equations, charge dynamics, EM waves"
homepage = "https://github.com/MacCracken/bijli"
repository = "https://github.com/MacCracken/bijli"
readme = "README.md"
documentation = "https://docs.rs/bijli"
keywords = ["electromagnetism", "physics", "maxwell", "simulation", "fields"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = ["field", "maxwell", "charge", "wave", "circuit", "material", "fdtd", "relativity", "polarization", "scattering", "beam", "rf"]
field = []
maxwell = []
charge = []
wave = []
circuit = []
material = []
fdtd = []
relativity = []
polarization = []
scattering = ["polarization"]
beam = []
rf = ["polarization"]
soorat-compat = []
compute = []
compute-wgpu = ["compute", "dep:wgpu"]
ai = ["dep:reqwest", "dep:tokio", "dep:serde_json"]
logging = ["dep:tracing-subscriber"]
full = ["field", "maxwell", "charge", "wave", "circuit", "material", "fdtd", "relativity", "polarization", "scattering", "beam", "rf", "soorat-compat", "compute", "ai", "logging"]

[dependencies]
hisab = "1.3.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

# Optional
reqwest = { version = "0.13", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde_json = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
wgpu = { version = "25", optional = true }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
required-features = ["field", "maxwell", "charge", "wave", "circuit", "material", "fdtd", "relativity", "polarization", "scattering", "beam", "rf"]

[[test]]
name = "integration"
required-features = ["field", "maxwell", "charge", "wave", "circuit", "material", "fdtd", "relativity", "polarization", "scattering", "beam", "rf"]

[[example]]
name = "basic_em"
required-features = ["field", "charge"]
